[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/party-icons/main_character_icon.png" type="Texture" id=1]
[ext_resource path="res://fonts/Alkhemikal.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/PartyMemberCard.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="MemberCard" type="ColorRect"]
margin_right = 311.0
margin_bottom = 120.0
rect_min_size = Vector2( 285, 120 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardLayout" type="HBoxContainer" parent="."]
margin_top = 4.0
margin_right = 392.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="CardLayout"]
margin_right = 64.0
margin_bottom = 134.0
texture = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemberInfo" type="VBoxContainer" parent="CardLayout"]
margin_left = 68.0
margin_right = 286.0
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemberName" type="Label" parent="CardLayout/MemberInfo"]
margin_right = 218.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "CHARACTER NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemberStats" type="VBoxContainer" parent="CardLayout/MemberInfo"]
margin_top = 35.0
margin_right = 218.0
margin_bottom = 111.0
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="CardLayout/MemberInfo/MemberStats"]
margin_right = 218.0
margin_bottom = 16.0
text = "HEALTH: 100/100"

[node name="Mana" type="Label" parent="CardLayout/MemberInfo/MemberStats"]
margin_top = 20.0
margin_right = 218.0
margin_bottom = 36.0
text = "MANA: 100/100"

[node name="Defense" type="Label" parent="CardLayout/MemberInfo/MemberStats"]
margin_top = 40.0
margin_right = 218.0
margin_bottom = 56.0
text = "DEFENSE: 100/100"

[node name="Experience" type="Label" parent="CardLayout/MemberInfo/MemberStats"]
margin_top = 60.0
margin_right = 218.0
margin_bottom = 76.0
text = "XP TO NEXT: 0/1000"
